samples/_failures_safe/1761129312_cc04e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c780233.c: In function ‘main’:
./samples/SAFE/__tmp_4c780233.c:175:5: error: expected expression at end of input
  175 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_4c780233.c:175:5: error: expected declaration or statement at end of input
